--- a/Fundamentos_Web/HTML/portafolio.html
+++ b/Fundamentos_Web/HTML/portafolio.html
@@ -42,12 +42,25 @@
                 <th>Robowan</th>
             </tr>
             <tr>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th>Pippo</th>
+                <th>Kuririn</th>
+                <th>Shirousa</th>
+                <th>Kirousa</th>
+                <th>Pandapple</th>
             </tr>
+            <tr>
+                <th>Dear Daniel</th>
+                <th>Dokidoki</th>
+                <th>Chibimaru</th>
+                <th>Kiki y Lala</th>
+                <th>U sa ha na</th>
+            </tr>
+            <tr>
+                <th>Sweet coron</th>
+                <th>Belletusa</th>
+                <th>Primaura</th>
+                <th>chi chi monchan</th>
+                <th> Yummy chums</th>
         </tbody>
     </table>
     <h3>Proyecto Sanrio</h3>
@@ -71,7 +84,7 @@
         </div>
         <br>
         <div>
-            <input type="submit" value="Enviar">
+            <input type="submit" value="Clic Enviar">
         </div>
     </form>
 
