--- a/Fundamentos_Web/HTML/formulario2.html
+++ b/Fundamentos_Web/HTML/formulario2.html
@@ -42,8 +42,34 @@
         <div>
             <h4>Gender Identify:</h4>
             <input type="radio" name="" id="">
-            <label for=""></label>
+            <label >male</label>
+            <input type="radio" name="" id="">
+            <label >Female</label>
+            <input type="radio" name="" id="">
+            <label>Non-Binary</label>
+            <input type="radio" name="" id="">
+            <label>I prefer not to answer</label>
         </div>
+        <div>
+            <p>A short description about myself:</p>
+            <textarea name="" id="" cols="30" rows="4"></textarea>
+            <br>
+            <br>
+            <label>Favorite Language</label>
+            <select name="" id="">
+                <option value="">Javascript</option>
+                <option value="">Python</option>
+            </select>
+            <br>
+            <br>
+            <input type="checkbox" name="" id="">
+            <label>Yes, I would like to receive periodic email updates</label>
+        </div>
+        <br>
+        <div>
+            <input type="submit" value="Create Account">
+        </div>
+        <p>*indicates a require field</p>
         
         
 
