--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="https:\\codingdojo.com">coding dojo</a>
+    <div>
+    <img src="img\descarga.png" alt="">
+    </div>
     <h1>Ejemplo</h1>
         <p class="is-centered">Este texto debe estar alineado al centro</p>
         <p>Este texto debiese permanecer alineado a la izquierda</p>
@@ -48,6 +52,15 @@
 
  <h1 class="center-text cyan back">CODING DOJO</h1>
  <a  class = "center-text cyan back text-deco-none" href="https:\\codingdojo.com">coding dojo</a>
+
+ <div>
+    borde
+ </div>
+ <button class="button" type="">boton</button>
+    <button type="">boton</button>
+    <p>
+        hola
+    </p>
 
 
 
