--- a/CSS/github/index.html
+++ b/CSS/github/index.html
@@ -12,21 +12,21 @@
         <h1>GitHub Blocks</h1>
         </div>
 
-        <div class="row purple-fondo">
-            <img class="fin" src="img\adventure-cat.png" alt="">
-            <img  class="kitty" src="img\hello-kitty.png" alt="">
-            <img  class="pony" src="img\twenty-percent-cooler-octocat.png" alt="">
+        <div class="row purple-fondo padmar">
+            <img class="octocat" src="img\adventure-cat.png" alt="">
+            <img  class="octocat" src="img\hello-kitty.png" alt="">
+            <img  class="octocat" src="img\twenty-percent-cooler-octocat.png" alt="">
         </div>
 
-        <div class="row blue-fondo">
-            <img class="pushin" src="img\pusheencat.png" alt="">
-            <img class="pyton" src="img\pythocat.png" alt="">
+        <div class="row blue-fondo padmar">
+            <img class="octocat" src="img\pusheencat.png" alt="">
+            <img class="octocat" src="img\pythocat.png" alt="">
         </div>
 
-        <div class="row brown-fondo">
-            <img class="link" src="img\linktocat.jpg" alt="">
-            <img class="kimona" src="img\kimonotocat.png" alt="">
-            <img class="nyancat" src="img\nyantocat.gif" alt="">
+        <div class="row brown-fondo padmar">
+            <img class="octocat" src="img\linktocat.jpg" alt="">
+            <img class="octocat" src="img\kimonotocat.png" alt="">
+            <img class="octocat" src="img\nyantocat.gif" alt="">
         </div>
 </body>
 </html>
